tdf#157397 vcl: PDF export: fix CreateControl replay

The problem is that the CreateLink and CreateControl actions are
replayed in a different order than they are recorded, because CreateLink
is a global action, and CreateControl a page action.

This means that the mCurId at the time when
PDFExtOutDevData::CreateControl() is called does not correspond to a
position in mParaIds when CreateControl is replayed; it will be inserted
too early and bump all the CreateLink ones to later indexes.

Avoid this by adding another global action CreateControlLink that is
added when CreateControl is being replayed, which appears to work.

(Another subtle problem is that, in case of PDF/A-1, the page actions
could be discarded completely; this should work in that case too.)

(regression from commit d4d471fc88fe4fd14f44dfccdfe360dec327d4f0)

Change-Id: I92d89ac08db6548e9f0d1480d984aeacb4d22262
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157767
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 2e32aa1e9fc240c9cd9854655106d0decbd3694a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157863
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>